--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
