--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "resolveJsonModule": true,
-        "baseUrl": ".",
+        "baseUrl": "./",
         "paths": {
             "@src/*": [
                 "./src/*"
