--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "clean": "cd android && .\\/gradlew clean && cd .. && yarn install && cd .."
   },
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.2",
@@ -25,6 +26,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
   },
