--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
   },
