--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "@unform/core": "2.1.3",
     "@unform/mobile": "2.1.3",
     "expo": "~46.0.9",
@@ -27,8 +30,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
