--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.9",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.17.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
